--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     ////////////////Tests////////////////////////////////
+    testImplementation "org.mockito:mockito-all:1.10.19"
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "org.powermock:powermock-module-junit4:1.6.2"
+    testImplementation "org.powermock:powermock-api-mockito:1.6.2"
+
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
